--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   <div class="nav-links">
     <a routerLink="">Home</a>
     <a routerLink="/all-challenges">All Challenges</a>
-    <a routerLink="/register">Register / Login</a>
+    <a routerLink="signup">Register / Login</a>
     <a routerLink="/profile">Profile</a>
   </div>
 </nav>
@@ -20,6 +20,7 @@
       <button (click)="navigateTo('challenges')">צפה בכל האתגרים</button>
       <button (click)="navigateTo('/register')">הצטרפי לאתגר</button>
       <button (click)="navigateTo('createChallenge')">העלאת אתגר</button>
+      <button (click)="navigateTo('signup')">הרשמה</button> <!-- הכפתור החדש -->
     </div>
   </div>
 </section>
