--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,11 @@
   <div class="logo">אתגרי כושר ובריאות</div>
   <div class="nav-links">
     <a routerLink="">Home</a>
-    <a routerLink="/all-challenges">All Challenges</a>
-    <a routerLink="signup">Register / Login</a>
+    <a routerLink="challenges">All Challenges</a>
+    <a routerLink="createChallenge">העלאת אתגר</a>
+    <a routerLink="signin">signin</a>
+    <a routerLink="signin">signout</a>
+    <a routerLink="signup">signup</a>
     <a routerLink="/profile">Profile</a>
   </div>
 </nav>
